--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   
-  <title>一入IT深似海</title>
+  <title>一入前端深似海</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta property="og:type" content="website">
-<meta property="og:title" content="一入IT深似海">
+<meta property="og:title" content="一入前端深似海">
 <meta property="og:url" content="http://yoursite.com/index.html">
-<meta property="og:site_name" content="一入IT深似海">
+<meta property="og:site_name" content="一入前端深似海">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="一入IT深似海">
+<meta name="twitter:title" content="一入前端深似海">
   
-    <link rel="alternative" href="/atom.xml" title="一入IT深似海" type="application/atom+xml">
+    <link rel="alternative" href="/atom.xml" title="一入前端深似海" type="application/atom+xml">
   
   
     <link rel="icon" href="/img/favicon.png">
